--- a/Translations/German/ModInfo.xml
+++ b/Translations/German/ModInfo.xml
@@ -5,8 +5,8 @@
   <modpicture>1920px-Flag_of_Germany.svg.png</modpicture>
   <author>Revan (aka. ShadowDuke)</author>
   <modioID>143281</modioID>
-  <modioFileID>2000557</modioFileID>
-  <modversion>1.58a</modversion>
+  <modioFileID>2066936</modioFileID>
+  <modversion>1.61</modversion>
   <homepage>https://github.com/ShadowDuke/OW_GermanPatch</homepage>
   <singlePlayer>true</singlePlayer>
   <multiplayer>true</multiplayer>
